kube/envoy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envoy-proxy
  template:
    metadata:
      labels:
        app: envoy-proxy
    spec:
      volumes:
        - name: config
          configMap:
            name: envoy-config
      containers:
        - name: envoy-proxy
          image: envoy-container
          ports:
            - containerPort: 8000
            - containerPort: 5000
          volumeMounts:
            - name: config
              readOnly: true
              mountPath: /etc/envoy
