kube/envoy/envoy.yaml
---
admin:
  access_log_path: "/tmp/admin_access.log"
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 5000
static_resources:
  listeners:
    - name: frontend
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: auto
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config: {}
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: react
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/api/"
                          route:
                            cluster: api_service
                            prefix_rewrite: "/"
                        - match:
                            prefix: "/"
                          route:
                            cluster: static_files
  clusters:
    - name: api_service
      connect_timeout: 10s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: api_service_1
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: appserver
                      port_value: 8001
    - name: static_files
      connect_timeout: 10s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: static_files_1
        endpoints:
          - lb_endpoints:
              endpoint:
                address:
                  socket_address:
                    address: appserver
                    port_value: 8002
