kube/envoy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy-proxy
spec:
  selector:
    app: envoy-proxy
  ports:
    - port: 8000
      targetPort: 8000
      name: service
    - port: 5000
      targetPort: 5000
      name: admin
